--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
+<form method="post" class="needs-validation" novalidate>
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alert alert-danger">Datos Invalidos!</div>
     {% endif %}
 
     {% if app.user %}
@@ -15,10 +15,22 @@
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUuid">Uuid</label>
-    <input type="text" value="{{ last_username }}" name="uuid" id="inputUuid" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <div class="form-row">
+        <div class="col-md-4 mb-3">
+            <label for="inputUuid">Uuid</label>
+            <input type="text" value="{{ last_username }}" name="uuid" id="inputUuid" class="form-control" autocomplete="username" required="required" autofocus>
+            <div class="invalid-feedback">
+                Please choose a ID.
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <label for="inputPassword">Password</label>
+            <input type="password" maxlength="4" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+            <div class="invalid-feedback">
+                Please choose a password.
+            </div>
+        </div>
+    </div>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
