--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Aghh! I mean, hello.{% endblock %}
+{% block title %}Sobre Nosotros{% endblock %}
 
 
 {% block body %}
 
 <div class="col-3">
     <div>
-        <img src="{{ asset('build/images/bigfoot.png') }}" class="big-foot-img" alt="sasquatch">
+        <img src="{{ asset('build/images/bigfoot.png') }}" class="big-foot-img" alt="nosotros">
     </div>
 </div>
 
