--- a/templates/transfer/transfer_action.html.twig
+++ b/templates/transfer/transfer_action.html.twig
@@ -16,12 +16,12 @@
 
                 <hr class="mt-5">
 
-                <p>Built with <a target="_blank" href="https://mdbootstrap.com/docs/standard/">Material Design for Bootstrap</a> - free and powerful Bootstrap UI KIT</p>
+                <p>Built with <a target="_blank" href="https://mdbootstrap.com/docs/standard/">Proceso de transacción para mis cuentas habiles</a> - free and powerful Bootstrap UI KIT</p>
 
-                <a class="btn btn-primary me-2" href="https://mdbootstrap.com/docs/standard/getting-started/installation/" target="_blank" role="button">Download MDB UI KIT <i class="fas fa-download"></i></a>
-                <a class="btn btn-danger me-2" target="_blank" href="https://mdbootstrap.com/docs/standard/" role="button">Learn more</a>
-                <a class="btn btn-success me-2" target="_blank" href="https://mdbootstrap.com/docs/standard/getting-started/" role="button">Tutorials</a>
-                <a class="btn btn-dark me-2" target="_blank" href="https://github.com/mdbootstrap/mdb-ui-kit" role="button">GitHub <i class="fab fa-github ms-2"></i></a>
+{#                <a class="btn btn-primary me-2" href="https://mdbootstrap.com/docs/standard/getting-started/installation/" target="_blank" role="button">Download MDB UI KIT <i class="fas fa-download"></i></a>#}
+{#                <a class="btn btn-danger me-2" target="_blank" href="https://mdbootstrap.com/docs/standard/" role="button">Learn more</a>#}
+{#                <a class="btn btn-success me-2" target="_blank" href="https://mdbootstrap.com/docs/standard/getting-started/" role="button">Tutorials</a>#}
+                <a class="btn btn-dark me-2" target="_blank" href="https://github.com/mdbootstrap/mdb-ui-kit" role="button">Vovler a cuentas <i class="fab fa-github ms-2"></i></a>
 
                 <hr class="mb-5"/>
                 <!-- Stepper -->
@@ -29,15 +29,15 @@
                     <div class="steps-row setup-panel">
                         <div class="steps-step">
                             <a href="#step-9" type="button" class="btn btn-indigo btn-circle">1</a>
-                            <p>Step 1</p>
+                            <p>Seleccion tipo de transacción</p>
                         </div>
                         <div class="steps-step">
                             <a href="#step-10" type="button" class="btn btn-default btn-circle" disabled="disabled">2</a>
-                            <p>Step 2</p>
+                            <p>Seleccion cuenta destino y monto</p>
                         </div>
                         <div class="steps-step">
                             <a href="#step-11" type="button" class="btn btn-default btn-circle" disabled="disabled">3</a>
-                            <p>Step 3</p>
+                            <p>Confirmar transacción</p>
                         </div>
                     </div>
                 </div>
@@ -70,26 +70,34 @@
                     <div class="row setup-content" id="step-10">
                         <div class="col-md-12">
                             <h3 class="font-weight-bold pl-0 my-4"><strong>Step 2</strong></h3>
-                            <div class="form-group md-form">
-                                {{ form_row(form.account) }}
-{#                                <label for="companyName" data-error="wrong" data-success="right">Company Name</label>#}
-{#                                <input id="companyName" type="text" required="required" class="form-control validate">#}
-                            </div>
-                            <div class="form-group md-form mt-3">
-                                {{ form_row(form.amount) }}
-{#                                <label for="companyAddress" data-error="wrong" data-success="right">Company Address</label>#}
-{#                                <input id="companyAddress" type="text" required="required" class="form-control validate">#}
-                            </div>
-                            <button class="btn btn-indigo btn-rounded prevBtn float-left" type="button">Volver</button>
-                            <button class="btn btn-indigo btn-rounded nextBtn float-right" type="button">Continuar</button>
+                                 {% set va = form.children['destinationAccount'].vars['choices'] is empty %}
+                                <div class="form-group md-form {{ va ? 'd-none' : '' }}">
+                                    {{ form_row(form.destinationAccount) }}
+                                    {#                                <label for="companyName" data-error="wrong" data-success="right">Company Name</label>#}
+                                    {#                                <input id="companyName" type="text" required="required" class="form-control validate">#}
+                                </div>
+                                <div class="form-group md-form mt-3 {{ va ? 'd-none' : '' }}">
+                                    {{ form_row(form.amount) }}
+                                    {#                                <label for="companyAddress" data-error="wrong" data-success="right">Company Address</label>#}
+                                    {#                                <input id="companyAddress" type="text" required="required" class="form-control validate">#}
+                                </div>
+                                <button class="btn btn-indigo btn-rounded prevBtn float-left {{ va ? 'd-none' : '' }}" type="button">Volver</button>
+                                <button class="btn btn-indigo btn-rounded nextBtn float-right {{ va ? 'd-none' : '' }}" type="button">Continuar</button>
+
+                                <div class="form-group md-form mt-3 {{ va ? '' : 'd-none' }}">
+                                    <h1>Opps! No tienes mas cuentas para transferir y no es posible hacer transacciones entre las misma cuenta</h1>
+                                </div>
+                             <button class="btn btn-indigo btn-rounded prevBtn float-left {{ va ? '' : 'd-none' }} " type="button">Volver</button>
+
+
                         </div>
                     </div>
 
                     <!-- Third Step -->
                     <div class="row setup-content" id="step-11">
                         <div class="col-md-12">
-                            <h3 class="font-weight-bold pl-0 my-4"><strong>Confirmar la transaccion.</strong></h3>
-                            <button class="btn btn-indigo btn-rounded prevBtn float-left" disabled type="button">Volver</button>
+                            <h3 class="font-weight-bold pl-0 my-4"><strong>Confirmar transacción.</strong></h3>
+                            <button class="btn btn-indigo btn-rounded prevBtn float-left"  type="button">Volver</button>
                             <button class="btn btn-default btn-rounded float-right" type="submit">Confirmar</button>
                         </div>
                     </div>
