--- a/templates/account/my_accounts.html.twig
+++ b/templates/account/my_accounts.html.twig
@@ -3,46 +3,5 @@
 {% block title %}My Accounts!{% endblock %}
 
 {% block body %}
-    <table class="table">
-        <thead>
-        <tr>
-            <th>{{ knp_pagination_sortable(pagination, 'id'|trans, 'id') }}</th>
-            <th>{{ knp_pagination_sortable(pagination, 'Nombre', 'name') }}</th>
-            <th>{{ knp_pagination_sortable(pagination, 'Abierta hace'|trans, 'openedDate') }}</th>
-            <th>{{ knp_pagination_sortable(pagination, 'Tipo'|trans, 'accountType') }}</th>
-            <th>{{ knp_pagination_sortable(pagination, 'Status'|trans, 'active') }}</th>
-            <th class="text-center">{{ 'Acciones'|trans }}</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for account in pagination %}
-            <tr data-id="{{ account.id }}">
-                <td>{{ account.id }}</td>
-                <td>{{ account.name }}</td>
-                <td><time datetime="{{ account.openedDate|date('Y-m-d H:i') }}">{{ account.openedDate|ago }}</time></td>
-                <td>{{ account.accountType.code }}</td>
-                <td>{{ account.active ? 'Activa' : 'Inactiva' }}</td>
-                <td class="text-center">
-                    <div class="dropdown">
-                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                            {{ 'Acciones'|trans }}
-                        </a>
-
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <li> <a class="dropdown-item s_14"
-                                    href="{{ path('transfer', { account: account.id }) }}">{{ 'Transferencia'|trans }}</a></li>
-                        </ul>
-
-                    </div>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    {# display navigation#}
-    {{ knp_pagination_render(pagination, null, {}, {
-        'align': 'center',
-        'size': 'small',
-    }) }}
-
+   {{ include('account/_table.html.twig') }}
 {% endblock %}
