--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_about') }}">Estado de cuenta</a>
+                    <a class="nav-link" href="{{ path('my_transfers') }}">Estado de cuenta</a>
                 </li>
 
                 <li class="nav-item">
@@ -63,6 +63,7 @@
             {% endif %}
         </ul>
     </nav>
+        {% block filter %}{% endblock %}
         {% block body %}{% endblock %}
 
          {% block javascripts %}
