mejoras en vistas

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,20 +14,20 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Inicio sesion cuenta Bancaria</h1>
     <div class="form-row">
         <div class="col-md-4 mb-3">
-            <label for="inputUuid">Uuid</label>
+            <label for="inputUuid">ID</label>
             <input type="text" value="{{ last_username }}" name="uuid" id="inputUuid" class="form-control" autocomplete="username" required="required" autofocus>
             <div class="invalid-feedback">
-                Please choose a ID.
+                Por favor ingrese un ID.
             </div>
         </div>
         <div class="col-md-4 mb-3">
             <label for="inputPassword">Password</label>
             <input type="password" maxlength="4" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
             <div class="invalid-feedback">
-                Please choose a password.
+               Por favor ingrese contraseña.
             </div>
         </div>
     </div>
