--- a/templates/provider/box_filter.html.twig
+++ b/templates/provider/box_filter.html.twig
@@ -8,7 +8,7 @@
         {#{{ _header|raw }}#}
         <h3 class="panel-title">
             {% block header %}
-                <i class="fa_light glyphicon glyphicon-plus"></i> {{ 'label.show_filters'|trans }}
+                <i class="fa_light glyphicon glyphicon-plus"></i> {{ 'Filtros'|trans }}
             {% endblock %}
         </h3>
     </div>
