--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,11 +4,6 @@
 
 {% block body %}
 <div class="example-wrapper">
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/varios/bank_php_symfony/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/varios/bank_php_symfony/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+    <h1>Home</h1>
 </div>
 {% endblock %}
